@@ -1,5 +1,6 @@
 Changelog for Collections.
 
+- Allow duplicating children
 - Fix TV search in selections
 - Check permissions before rendering specific action button / context menu action
 - Handle edit and view child as classic link, allowing to cmd/ctrl click to open in new tab
